--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": "10.2.5",
     "browser-sync": "2.26.14",
     "gulp": "4.0.2",
+    "gulp-csso": "^4.0.1",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
     "gulp-sass": "4.1.0",
@@ -20,7 +21,8 @@
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp styles",
-    "start": "gulp"
+    "start": "gulp",
+    "html": "gulp html"
   },
   "browserslist": [
     "last 2 versions",
@@ -37,5 +39,9 @@
   ],
   "engines": {
     "node": "14.15.0"
+  },
+  "dependencies": {
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-rename": "^2.0.0"
   }
 }
